[tool.poetry]
name = "ansible-scripts"
version = "0.1.0"
description = "Ansible Scripts"
authors = ["Shantanu Joshi <weemadarthur@yggdrasil.in>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
